Corrected parent pom.xml and .bat scripts