@@ -12,12 +12,16 @@ mkdir mods
 echo " > multi-compiling modules"
 rem spark is required as an automatic module, so copy it to mods
 copy libs\spark-core-*.jar mods\
-javac --module-path mods --module-source-path "./*/src/main/java" -d classes --module monitor
+rem since the monitor services are not required (directly or indirectly)
+rem from the root module monitor, they are added manually
+javac --module-path mods --module-source-path "./*/src/main/java" --add-modules=monitor.observer.alpha,monitor.observer.beta,monitor.observer.gamma -d classes --module monitor
 
 echo " > packaging modules"
 jar --create --file mods/monitor.observer.jar -C classes/monitor.observer .
 jar --create --file mods/monitor.observer.alpha.jar -C classes/monitor.observer.alpha .
 jar --create --file mods/monitor.observer.beta.jar -C classes/monitor.observer.beta .
+jar --create --file mods/monitor.observer.gamma.jar -C classes/monitor.observer.gamma .
+jar --create --file mods/stats.fancy.jar -C classes/stats.fancy .
 jar --create --file mods/monitor.statistics.jar -C classes/monitor.statistics .
 jar --create --file mods/monitor.persistence.jar -C classes/monitor.persistence .
 jar --create --file mods/monitor.rest.jar -C classes/monitor.rest .
